tests/paczka1/small_fuzzy/89456070.err
Error in line 8: ZO36r17iLm S17 41,2
Error in line 7: A714 S17 44,4
